Added Title, Search box, and Search button to HTML file.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Weather Forecast</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="weather-container">
+      <h2>Today's Weather Forecast</h2>
+      <input type="text" id="city" placeholder="Enter City Name Here" />
+      <button id="search-button">Search</button>
+    </div>
+  </body>
   <script src="script.js"></script>
 </html>
