--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
       <div id="temp-div"></div>
 
-      <div id="weather-info"></div>
+      <div id="weather-info">
+        <div id="additional-info"></div>
+      </div>
 
       <div id="hourly-forecast"></div>
     </div>
