Fixed bugs in script.js

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <div id="additional-info"></div>
       </div>
 
+      <h3 id="hourly-heading">Hourly Forecast</h3>
       <div id="hourly-forecast"></div>
     </div>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
