--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather Forecast</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Today's Weather Forecast</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
     <div id="weather-container">
-      <h2>Today's Weather Forecast</h2>
-      <input type="text" id="city" placeholder="Enter City Name Here" />
-      <button id="search-button">Search</button>
+        <h2>Today's Weather Forecast</h2>
+        <input type="text" id="city" placeholder="Enter city">
+        <button id="search-button">Search</button>
 
-      <img id="weather-icon" src="" alt="Weather Icon">
+        <img id="weather-icon" alt="Weather Icon">
 
-      <div id="date-time"></div>
+        <div id="temp-div"></div>
 
-      <div id="temp-div"></div>
+        <div id="weather-info"></div>
 
-      <div id="weather-info">
-        <div id="additional-info"></div>
-      </div>
+        <div id="date-time"></div>
 
-      <h3 id="hourly-heading">Hourly Forecast</h3>
-      <div id="hourly-forecast"></div>
+        <div id="hourly-forecast"></div>
     </div>
-    <script src="script.js"></script>
-  </body>
+    <script src="./script.js"></script>
+</body>
 </html>
